projects/008-terrain-motion-lab/snapshots/v003/app/README.md
# 山地巡游实验室 · 运行与操作

环境：Node.js 22.15.0 已验证；支持 WebGL 的现代浏览器。无依赖安装步骤，Three.js r185 与 OrbitControls 随项目保存。

## 启动

```powershell
cd projects/008-terrain-motion-lab/app
node serve.mjs
```

打开 `http://127.0.0.1:4318/app/`。服务只监听本机，`/app/materials.html` 为素材档案。静态文件位于当前项目范围，服务拒绝越界路径。若 4318 已占用，可设置 `PORT` 后启动，以终端输出为准。

## 建议体验顺序

1. 先点顶部“看场景如何一步步搭建”，用“下一步”观察六次增量，并独立开关各类物体、表面贴图与光照。然后返回第一层点击“跟随橙色观光车”，观察弯道减速。
2. 第二层“前往试验段”，抬高 3 米，观察车头俯仰和速度；“撤销上次调整”恢复。“保存方案”将道路、湿润程度、巡游上限与策略存到当前浏览器，“恢复方案”明确读取，不会自动覆盖开场默认值。
3. 第三层切换雨后与持续降雨；“看双车制动”转到试验场，金色车代表干燥，青色车代表全湿，两车从 24 km/h 同时制动。
4. 第四层接管车辆：W / ↑ 加速；S / ↓ / 空格制动；A / D 或左右键在路内调整；Esc 交回。触屏按住场景里的四个按钮。失去窗口焦点会交回 AI。
5. 第五层依次对比白模、只有颜色与完整效果；调低法线细节、改变粗糙度与纹理重复，关闭阴影和动态；“拆开车辆”暂停巡游并分离车身部件。

全景和素材近看支持拖动旋转/滚轮缩放。暂停冻结巡游，仍可以切换和调整镜头。“重置全部”恢复默认参数和起点，不删除浏览器里已经保存的方案。

## 模块

| 文件 | 职责 |
| :--- | :--- |
| index.html / styles.css | 场景主界面与响应式布局 |
| app.mjs | 五层说明、输入、统一配置、保存、图表与页面工具 |
| model.mjs | 道路/地形采样、速度限制、简化运动、制动与存档验证 |
| scene.mjs | 几何场景、材质、车辆、镜头、天气与制动试验场 |
| materials.html | 贴图、几何、灯光和动态效果档案 |
| vendor/ | Three.js r185、OrbitControls 及 MIT 许可证 |

模型以 1/60 秒更新，与渲染独立。道路中心和车辆位置共用同一高程函数。手动模式仍沿路线辅助行驶，不支持任意离路。

## 验证与构建

```powershell
node --test model.test.mjs
node build.mjs
node check.mjs
```

构建复制到 `app/dist/`，并将资源引用转换为构建目录内的相对路径。根仓库的构建脚本会自动发现此 `build.mjs`，无需加入统一依赖框架。本次只运行本项目构建，未触发全仓库发布。

可选 WebMCP 页面接口：`read_terrain_lab`、`configure_terrain_lab`、`run_braking_comparison`、`inspect_scene_construction`、`start_terrain_scenario`、`compare_terrain_scenario`。它们使用可见操作的同一份状态；不支持该接口的浏览器不影响普通操作。

[研究记录](../notes.md) · [项目概览](../README.md)

## 任务入口与方案对照

页面“按实际任务开始”提供景区线路讲解、雨后运行演示、坡道改造讨论。选择任务会应用参数并进入相应层次；下方对照表计算默认方案与当前方案差异。手动调整后，点击“计算当前方案对照”；“导出对照记录”下载含参数与模型假设的 JSON。导出的结果不是工程预测。

巡游站和观景台已避开车辆通行范围；建筑占地与车辆移动使用同一份约束数据，异常占道时停车。它是保守的防穿模保护，没有完整刚体碰撞响应。

## 观察通行保护

- “到建筑旁检查”：定位到巡游站附近，显示建筑金框和车辆青圈；房屋模型的墙、屋顶、台阶与门窗均纳入占地核验。
- “演示前车急停”：前车停车，后车从较高速度接近，不能越过前车。第四层可接管并持续踩油门验证。
- “让前车继续行驶”：解除前车停车，两车继续。
- 显示/隐藏保护范围不会解除通行规则。范围是保守包围，不是完整车辆碰撞外壳；禁止超车，不模拟撞击反弹。

## 地表材质专项模块

打开 `http://127.0.0.1:4318/app/surface-lab.html`。主页面顶部与素材档案均有入口。按六步查看，并用左右参考比较：左侧默认前一步，点击“锁定左侧为当前效果”可保留比较基准。所有开关、参数、低视角和替代方案演示作用于当前模块。

`surface-lab.mjs` 管理双视图与实际材质，`surface-model.mjs` 管理参数和步骤；`surface.test.mjs` 核对法线不改变几何、草叶增加几何及参数边界。`npm test` 运行主场景与材质模块共 21 项测试。页面提供 `read_surface_lab`、`configure_surface_lab`、`surface_lab_action` 三个可选状态/操作接口。

## 共享组件复用演示

打开 `http://127.0.0.1:4318/app/reuse-lab.html`，按三个按钮观察同配方应用、道路加宽与路线替换。两边均调用 `reuse-core.mjs` 的 `generateRoute`，配方由同文件的 recipes 定义；`reuse-lab.mjs` 只负责渲染、输入和演示。保存/恢复使用浏览器本地的 terrain-reuse-v1 存档，导出为 JSON。主场景与材质实验顶部都有入口。

`reuse.test.mjs` 验证双场景生成、宽度、道路与地表高度、纹理尺度及存档/输入边界。`npm test` 现运行三组共 28 项测试。可选接口为 read_reuse_demo、configure_reuse_demo、run_reuse_demo。

## 树木与山地控制

复用演示顶部新增“切换树林规模”“切换山地高度”“移动主山丘”。详细参数区可设置 treeScale、treeDensity、treePattern、hillHeight、hillX；这些字段也由 configure_reuse_demo 接受。run_reuse_demo 新增 forest、mountain、moveHill 三个动作。

reuse-core.mjs 现在分别导出 generateTerrain（高度公式）、generateRoute（道路与接地衔接）、scatterTrees（确定性树木布置）。植树数量表示候选点上限；道路/湖区剔除后得到实际树数。树冠半径随大小变化，避让规则始终保留 0.25 m 额外间隔。

保存格式为 version 2，仍兼容原五字段 version 1。没有自动覆写旧存档；仅点击保存才写入。


自然环境新版：打开 `reuse-lab.html`，使用“看整体 / 走到路上 / 两个场景对照 / 自然细节”。`nature-render.mjs` 管理分枝、针叶卡片、地表混合和环境细节；地形与树木布置仍由 `reuse-core.mjs` 共用。新增素材与现实对应边界见项目 README 的自然环境章节。


### 户外行程演示

在本地服务打开 `/app/outdoor.html`，或从 `reuse-lab.html` 顶部入口进入。

1. 点击四个章节直接体验自驾、露营、登山或日出。
2. 点击画面内“播放行程”或下方播放按钮；整段约 103 秒（日出段约 24 秒），可暂停、重来、拖动进度。
3. 使用“自由观察 / 全景地图”检查营地与路线关系；改变光照查看同一场地的日间、黄昏或晨光。
4. 最后 12% 行程控制太阳升起。章节跳转也代表时间压缩，没有真实日期或天文计算。

WebMCP 提供 `read_outdoor_demo` 和 `configure_outdoor_demo`，对应页面可见操作。场景源码独立于原巡游车辆物理，复用环境模块及全部已有贴图。

连续体验版：画面底部进度条可直接定位减速停车、下车入营、营地休息、夜间过场、清晨上山等过程。小地图显示实际路线和角色位置。暂停后人物保持位置；点击章节则直接预览该段。

山谷植被版：点击“山谷全景”或“拉远查看整个山谷”，观察约 224 × 224 米、默认约 1,915 棵松树（数量随布局变化）的连续环境。返回“跟随体验”保留原行程。近远景按区块自动切换，不需要用户配置。

树形与地表细节版：白天全景可观察树冠宽窄、针叶色调与山坡色斑；切回跟随体验看道路近景，再切换黄昏观察营灯。近远地表共用同一套颜色变化与树下遮蔽规则。

动线版：点击“动线总览”，检查山脚停车、营地与日出山脊的关系。金色为约 36 m 车道，青色为约 46 m 步道；步行爬升 11 m。`configure_outdoor_demo` 支持 `camera: "layout"`。切换章节会恢复自动光照；若同时传入 `light`，则使用指定光照。

日出：点击第四章节即从 88% 自动播放约 24 秒，或点击“天边泛红 / 日轮初升 / 晨光铺开”定格阶段。日出结束后，画面内播放按钮改为“重看日出”，从该段起点重新播放。

树影：保持“动线总览”或自由视角不变，在“环境光照”切换 06:10 清晨、12:30 正午、18:05 傍晚。左上角显示该演示时间；正午树影短，早晚长且方向相反。恢复“随行程变化”后，时钟与太阳回到当前行程时间。远景树同样参与投影。

细节观察：画面下方“看山路衔接”定位进度 73.5%、正午光照；“看落脚动作”从 65% 开始播放；“看晨光层次”定位 97%、自动光照。通过这些入口可检查坡面衔接、世界坐标落脚与近远树林受光。`outdoor-core.mjs` 管理路径周围地形整形，`outdoor-actors.mjs` 的 `footPlacement` 生成可重复的落脚姿态，`outdoor-details.mjs` 放置路肩碎石。当前完整测试为 55 项。

日出朝向：第四章登顶后先转身面向太阳；“人物与日出”显示人物后侧画面，“人物视角”从眼部沿实际朝向观看。WebMCP 新增 `camera: "eyes"`；离开日出段自动回到跟随镜头。


### 布局工作台：预览、生成、保存

1. 点击顶部“打开布局工作台”，选择模板或拖动营地、山顶圆点，也可用滑杆调整。
2. 比较“当前场景 → 待生成预览”的车道长度、步道长度与爬升。
3. 点击“生成并查看”，场景重建后切到正午动线总览；再用四个章节检查新布局。
4. 点击“保存当前方案”存入本机；刷新后“恢复已存方案”。文件区可下载已生成方案，导入文件只更新预览，不立即替换场景。

`outdoor-recipe.mjs` 定义默认值、三种模板、参数边界及 version 2 存档编码及 version 1 兼容解析；`outdoor-editor.mjs` 管理预览、拖动和本机存档；`outdoor-core.mjs` 根据方案生成道路、地形及避让规则。保存键为 `songlan-outdoor-layout-v1`，与旧实验存档独立。

`configure_outdoor_layout` 对应页面可见操作，支持 `action: preview | preset | apply | save | restore | reset`、`preset: original | ridge | valley`，以及可选 recipe 字段 `campX, campZ, summitX, summitZ, ascent, roadBend`。`read_outdoor_demo` 返回已应用方案、待生成方案、布局指标和上次生成比较。参数越界、未知字段、无效存档不会替换当前场景。

当前模板输入范围：营地 x=4～10、z=8～12；山顶 x=12～20、z=-22～-16；爬升 8～14 m；车道偏移 -3～3 m。坐标为虚构场景局部坐标。53 项测试包括 64 组边界组合的路线接续与营位、三模板森林避让/取景净空、存档往返及坏输入拒绝。


### 自然环境与效果记录

在布局工作台选择“自然环境”，再生成。三种环境与路线坐标独立；选择布局模板保留已选环境。recipe 新增 `environment: forest | meadow | alpine`，保存/下载包含此参数。旧版文件补为 forest。顶部“查看本轮效果记录”展示实际截图，提供三个可下载方案。

[完整效果记录](../effect-log.md) 包含改前、改后、岩地初稿、远景、晨光和后续验收目标。`environment-core.mjs` 管理环境规则和确定性地被分布；`environment-render.mjs` 渲染草簇、灌木和岩石；`landscape-surface.mjs` 按坡度/斑块混合岩面。自动测试共 55 项。


### 可运行版本归档

[历史版本页](versions.html) 提供 V001/V002 与开发版。快照保存及校验命令见 [归档规则](../snapshots/README.md)。开发版 `outdoor.html?layout=valley&view=sunrise#stage` 使用低坡布局、97% 行程与晨光，便于和两个归档入口比较。

本轮测试 57 项通过；新增 foliage-shading.mjs 用于冠体法线、颜色校准和透明边缘补色。树冠受光仍属近似，详细取舍见 [效果记录](../effect-log.md)。


## 营地扩建评审案例

访问 `http://127.0.0.1:4318/app/camp-planner.html`。先保持 4 组 / 4 m，切换 A/B；再改为 6 组 / 4 m 查看冲突，或 6 组 / 2 m 查看 A 的适用条件。营位观察、示意时间、路线播放均可操作。保存后可恢复需求和备注；导出提供完整评审单预览及下载入口，下载受浏览器支持情况影响，也可直接复制预览文字。

存档键独立于户外布局工作台；数据只在本机。场地是示例，详见 [业务说明](../use-case-camp.md)。历史快照工具现支持读取 `read_camp_review` 的暂停起点状态，自动选择营地案例作为归档入口。
